// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de citas Actualizar Cita 1`] = `
Citas {
  "citas": [
    {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1684039714648,
      "mascota": "Nuevo Nombre",
      "propietario": "Jesús",
      "sintomas": "Solo duerme",
      "telefono": "323333",
    },
  ],
}
`;

exports[`Probar la clase de citas Agregar una nueva cita 1`] = `
Citas {
  "citas": [
    {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1684039714648,
      "mascota": "Hook",
      "propietario": "Jesús",
      "sintomas": "Solo duerme",
      "telefono": "323333",
    },
  ],
}
`;

exports[`Probar la clase de citas Eliminar cita 1`] = `
Citas {
  "citas": [],
}
`;
